# vox-server

./: .clang-tidy  .dockerignore  .gitignore  API.md  CMakeLists.txt  README.md  TASK.md  compile_commands.json
.github/workflows/: ci-reusable.yml  ci_deploy_pr_branch.yml  ci_fork_pr.yml  ci_tests.yml  deploy.yml
cmake/: PatchCompileCommandsForClang.cmake
deploy/: .env.example  Dockerfile  Dockerfile.prebuilt  docker-compose.build.yml  docker-compose.yml  docker-entrypoint.sh  eula.example.txt  vox.conf  vox.conf.example
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: 10-vox.conf  20-ssl.conf.example
deploy/scripts/: init-letsencrypt.sh
lib/: CMakeLists.txt
lib/boost/: CMakeLists.txt
lib/vox_admin/: CMakeLists.txt  admin_service.cpp  admin_service.hpp
lib/vox_attachments/: CMakeLists.txt  attachment_service.cpp  attachment_service.hpp
lib/vox_auth/: CMakeLists.txt  auth_service.cpp  auth_service.hpp  password_hasher.cpp  password_hasher.hpp  token_manager.cpp  token_manager.hpp
lib/vox_common/: CMakeLists.txt  bounded_queue.hpp  config.cpp  config.hpp  expected_polyfill.hpp  hmac_sha256.cpp  hmac_sha256.hpp  logging.cpp  logging.hpp  picosha2.h  random_bytes.cpp  random_bytes.hpp  shard_map.hpp  thread_pool.cpp  thread_pool.hpp  types.hpp  uuid.cpp  uuid.hpp
lib/vox_net/: CMakeLists.txt  error_http.hpp  http_dispatch.cpp  http_dispatch.hpp  http_listener.cpp  http_listener.hpp  http_session.cpp  http_session.hpp  rate_limiter.cpp  rate_limiter.hpp  server_context.hpp  ws_registry.cpp  ws_registry.hpp
lib/vox_relay/: CMakeLists.txt  conversation_service.cpp  conversation_service.hpp  delivery_manager.cpp  delivery_manager.hpp  relay_service.cpp  relay_service.hpp
lib/vox_store/: CMakeLists.txt  attachment_repository.cpp  attachment_repository.hpp  conversation_repository.cpp  conversation_repository.hpp  database.cpp  database.hpp  device_repository.cpp  device_repository.hpp  envelope_repository.cpp  envelope_repository.hpp  sdui_repository.cpp  sdui_repository.hpp  session_repository.cpp  session_repository.hpp  sync_state_repository.cpp  sync_state_repository.hpp  user_repository.cpp  user_repository.hpp
scripts/: run-clang-tidy.sh
tests/: CMakeLists.txt  admin_tests.cpp  attachment_tests.cpp  auth_tests.cpp  net_api_tests.cpp  relay_tests.cpp  store_tests.cpp  thread_pool_tests.cpp
tests/test_suites/: AdminTestSuite.cpp  AdminTestSuite.hpp  AttachmentTestSuite.cpp  AttachmentTestSuite.hpp  AuthTestSuite.cpp  AuthTestSuite.hpp  NetApiTestSuite.cpp  NetApiTestSuite.hpp  RelayTestSuite.cpp  RelayTestSuite.hpp  StoreTestSuite.cpp  StoreTestSuite.hpp  ThreadPoolTestSuite.cpp  ThreadPoolTestSuite.hpp
